Fixing project alignment

--- a/src/components/AboutContent.css
+++ b/src/components/AboutContent.css
@@ -64,3 +64,15 @@
     background-color: rgb(17, 180, 221);
     color: rgb(255, 255, 255);
 }
+
+.profile-image {
+    margin-top: 1rem;
+    text-align: center;
+}
+
+.profile-image .img {
+    border-radius: 50%;
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+}
